network.tf
resource "aws_s3_bucket" "bucket_s3_sor_github" {
  bucket = "${var.environment}-${var.bucket_s3_sor_github}"
}

resource "aws_key_pair" "key" {
  key_name   = "aws-key-pipelines"
  public_key = var.aws_key_pub
}

resource "aws_instance" "vm" {
  ami                         = "ami-0ea3c35c5c3284d82" # dentro da AWS >> EC2 >> Instances >> Launch Instances >> Ubuntu >> AMI ID
  instance_type               = "t2.micro"
  key_name                    = aws_key_pair.key.key_name
  subnet_id                   = "subnet-09d21cbec360f4d5e"
  vpc_security_group_ids      = [aws_security_group.security_group.vpc_id]
  associate_public_ip_address = true

  tags = {
    Name = "${var.environment}-vm-terraform"
  }
}

resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "${var.environment}-vpc-terraform"
  }
}

resource "aws_subnet" "subnet" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "${var.environment}-subnet-terraform"
  }
}

resource "aws_security_group" "security_group" {
  name        = "${var.environment}-security-group-terraform"
  description = "Permitir acesso na porta 22"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-security-group-terraform"
  }
}
